--- a/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-template.scss
+++ b/webapp/sources/rudder/rudder-web/src/main/style/rudder/rudder-template.scss
@@ -830,7 +830,7 @@ ul {
   padding-left: 15px;
 }
 .rudder-template .dataTable .report-compliance{
-  padding: 0;
+  padding: 0 !important;
 }
 .rudder-template .dataTable .report-compliance > div{
   display: flex;
